[project]
name = "django-saas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.2",
    "psycopg>=3.2.3",
    "requests>=2.32.3",
    "whitenoise>=6.8.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
